Added CSS and JS practice

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Material Examples for JavaScript</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Material Examples for JS & jQuery</h1>
-    <p>Hello World!</p>
-    <script> scr ="script.js"</script>
+    <main>
+        <h1>Material Examples for JS & jQuery</h1>
+        <h2 class="green">Some content</h2>
+        <p>Hello World!</p>
+        <button id=add-button>add</button>
+        <button id=remove-button>remove</button>
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src= "script.js"></script>
 </body>
 </html>
