conditions and loops added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id=add-button>add</button>
         <button id=remove-button>remove</button>
     </main>
+    <input id= "name" type="text">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src= "script.js"></script>
 </body>
